@@ -1,3 +1,7 @@
+2006-06-23  Daniel South  <wildcard_25@users.sourceforge.net>
+
+	* ijbridge.tcl: Correct some list matching for IrcUserList.
+
 2006-03-13  Pat Thoyts  <patthoyts@users.sourceforge.net>
 
 	* ijbridge.tcl: Added version command.
